--- a/themes.html
+++ b/themes.html
@@ -449,7 +449,8 @@
                 <span>
                     <div class="tab" style="background-color: transparent;">
                         <svg class="w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true"
-                            xmlns="http://www.w3.org/2000/svg" width="26px" height="26px" fill="none" viewBox="0 0 24 24">
+                            xmlns="http://www.w3.org/2000/svg" width="26px" height="26px" fill="none"
+                            viewBox="0 0 24 24">
                             <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                 d="M5 19V4a1 1 0 0 1 1-1h12a1 1 0 0 1 1 1v13H7a2 2 0 0 0-2 2Zm0 0a2 2 0 0 0 2 2h12M9 3v14m7 0v4" />
                         </svg>
@@ -475,21 +476,8 @@
                 <span>Registration</span>
             </a>
 
-            <a href="members.html" class="sidebar-link active" onclick="closeSidebar()">
-                <span>
-                    <div class="tab" style="background-color: transparent;">
-                        <svg class="w-[26px] h-[26px] text-gray-800 dark:text-white" aria-hidden="true"
-                            xmlns="http://www.w3.org/2000/svg" width="26px" height="26px" fill="none" viewBox="0 0 24 24">
-                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                d="M3.78552 9.5 12.7855 14l9-4.5-9-4.5-8.99998 4.5Zm0 0V17m3-6v6.2222c0 .3483 2 1.7778 5.99998 1.7778 4 0 6-1.3738 6-1.7778V11" />
-                        </svg>
-                    </div>
-                </span>
-                <span>Committee</span>
-            </a>
-
             <!-- Contact (phone icon) -->
-            <a href="contact.html" class="sidebar-link" onclick="closeSidebar()">
+            <a href="#contact" class="sidebar-link" onclick="closeSidebar()">
                 <span>
                     <div class="tab" style="background-color: transparent;">
                         <svg viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2" stroke-linecap="round"
@@ -518,33 +506,40 @@
 
         <div class="themes-grid">
             <div class="theme-card">
+                <svg class="w-6 h-6 text-gray-800 dark:text-white theme-icon" aria-hidden="true"
+                    xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                        d="M20.283 8h-4.285m3.85 3h-3.85m4.061-6H11v11h8.27l1.715-9.847A.983.983 0 0 0 20.059 5ZM6.581 13.23h-.838A13.752 13.752 0 0 1 5.622 11c-.02-.745.02-1.49.12-2.23h1.04c.252 0 .496-.088.683-.245a.927.927 0 0 0 .329-.61l.2-1.872a.888.888 0 0 0-.045-.39.936.936 0 0 0-.212-.34 1.017 1.017 0 0 0-.341-.231A1.08 1.08 0 0 0 6.983 5h-2.06a1.27 1.27 0 0 0-.699.204 1.135 1.135 0 0 0-.442.543A15.066 15.066 0 0 0 3.007 11a15.656 15.656 0 0 0 .795 5.229c.165.462 1.342.771 1.864.771h1.116c.142 0 .283-.028.413-.082.13-.053.246-.132.341-.23a.936.936 0 0 0 .212-.34.889.889 0 0 0 .046-.391l-.201-1.873a.927.927 0 0 0-.33-.609 1.059 1.059 0 0 0-.682-.245ZM10 18v1h10v-1a2 2 0 0 0-2-2h-6a2 2 0 0 0-2 2Z" />
+                </svg>
+
+                <h3>Electronics & Telecommunication</h3>
+                <p>Electronics & Telecommunication: 5G & Beyond, VLSI Design, Embedded Systems, Signal Processing,
+                    Wireless & Satellite Communication, RF & Microwave Engineering.
+                </p>
+                <a href="register.html" class="theme-btn">Submit Paper</a>
+            </div>
+
+            <div class="theme-card">
                 <svg class="theme-icon" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                         d="M9.75 17L9 20l-1 1h8l-1-1-.75-3M3 13h18M5 17h14a2 2 0 002-2V5a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" />
                 </svg>
-                <h3>Computer Science & AI</h3>
-                <p>Machine Learning, Data Science, Artificial Intelligence, Software Engineering, Cybersecurity</p>
+                <h3>Computer Science & AI Data Science</h3>
+                <p>Computer Science / AI / Data Science: Machine Learning, Generative AI, Big Data Analytics,
+                    Cybersecurity, Blockchain Technology, Computer Vision.
+                </p>
                 <a href="register.html" class="theme-btn">Submit Paper</a>
             </div>
 
             <div class="theme-card">
                 <svg class="theme-icon" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                        d="M21 12a9 9 0 01-9 9m9-9a9 9 0 00-9-9m9 9H3m9 9a9 9 0 01-9-9m9 9c1.657 0 3-4.03 3-9s-1.343-9-3-9m0 18c-1.657 0-3-4.03-3-9s1.343-9 3-9m-9 9a9 9 0 019-9" />
+                        d="M13 10V3L4 14h7v7l9-11h-7z" />
                 </svg>
-                <h3>Interdisciplinary</h3>
-                <p>Cross-domain research, Sustainable technology, Innovation management, Engineering ethics</p>
-                <a href="register.html" class="theme-btn">Submit Paper</a>
-            </div>
-
-            <div class="theme-card">
-                <svg class="theme-icon" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                        d="M19 21V5a2 2 0 00-2-2H7a2 2 0 00-2 2v16m14 0h2m-2 0h-5m-9 0H3m2 0h5M9 7h1m-1 4h1m4-4h1m-1 4h1m-5 10v-5a1 1 0 011-1h2a1 1 0 011 1v5m-4 0h4" />
-                </svg>
-                <h3>Civil Engineering</h3>
-                <p>Structural engineering, Transportation, Environmental engineering, Smart cities, Construction
-                    technology</p>
+                <h3>Electrical Engineering</h3>
+                <p>Electrical Engineering: Smart Grids, Power Electronics, Renewable Energy, Energy Storage Systems,
+                    Electric Vehicles Technology.
+                </p>
                 <a href="register.html" class="theme-btn">Submit Paper</a>
             </div>
 
@@ -556,17 +551,34 @@
                         d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />
                 </svg>
                 <h3>Mechanical Engineering</h3>
-                <p>Manufacturing technology, Robotics, Thermal systems, Materials science, Automation</p>
+                <p>
+                    Mechanical Engineering: Automation, CAD/CAM, Thermal Systems, Robotics, Additive Manufacturing (3D
+                    Printing).
+                </p>
                 <a href="register.html" class="theme-btn">Submit Paper</a>
             </div>
 
             <div class="theme-card">
                 <svg class="theme-icon" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                        d="M13 10V3L4 14h7v7l9-11h-7z" />
+                        d="M19 21V5a2 2 0 00-2-2H7a2 2 0 00-2 2v16m14 0h2m-2 0h-5m-9 0H3m2 0h5M9 7h1m-1 4h1m4-4h1m-1 4h1m-5 10v-5a1 1 0 011-1h2a1 1 0 011 1v5m-4 0h4" />
                 </svg>
-                <h3>Electrical Engineering</h3>
-                <p>Power systems, Renewable energy, Electronics, Control systems, Communication technology</p>
+                <h3>Civil Engineering</h3>
+                <p>Civil Engineering: Smart Cities, Infrastructure Innovation, Environmental Technologies, Disaster
+                    Resilient Infrastructure.
+                </p>
+                <a href="register.html" class="theme-btn">Submit Paper</a>
+            </div>
+
+            <div class="theme-card">
+                <svg class="theme-icon" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                        d="M21 12a9 9 0 01-9 9m9-9a9 9 0 00-9-9m9 9H3m9 9a9 9 0 01-9-9m9 9c1.657 0 3-4.03 3-9s-1.343-9-3-9m0 18c-1.657 0-3-4.03-3-9s1.343-9 3-9m-9 9a9 9 0 019-9" />
+                </svg>
+                <h3>Interdisciplinary</h3>
+                <p>Interdisciplinary Topics: IoT, Sustainable Technologies, Industry 4.0, Assistive Devices, Digital
+                    Twin, Quantum Computing, Space Technology.
+                </p>
                 <a href="register.html" class="theme-btn">Submit Paper</a>
             </div>
 
@@ -576,9 +588,13 @@
                         d="M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.247 18 16.5 18c-1.746 0-3.332.477-4.5 1.253" />
                 </svg>
                 <h3>Basic Science & Humanities</h3>
-                <p>Applied mathematics, Physics, Chemistry, Language studies, Social sciences, Research methodology</p>
+                <p>
+                    Basic Science & Humanities:
+                    Physics for Everyday Life, Chemistry in Sustainability, Mathematics for Innovation, Material science
+                    for future technologies</p>
                 <a href="register.html" class="theme-btn">Submit Paper</a>
             </div>
+
         </div>
 
     </div>
@@ -621,6 +637,4 @@
     </script>
 </body>
 
-
 </html>
-
