--- a/poster.html
+++ b/poster.html
@@ -534,21 +534,6 @@
                 <span>Important Dates</span>
             </a>
 
-            <a href="poster.html" class="sidebar-link" onclick="closeSidebar()">
-                <span>
-                    <div class="tab" style="background-color: transparent;">
-                        <svg class="w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true"
-                            xmlns="http://www.w3.org/2000/svg" width="26px" height="26px" fill="none"
-                            viewBox="0 0 24 24">
-                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                d="M5 19V4a1 1 0 0 1 1-1h12a1 1 0 0 1 1 1v13H7a2 2 0 0 0-2 2Zm0 0a2 2 0 0 0 2 2h12M9 3v14m7 0v4" />
-                        </svg>
-
-                    </div>
-                </span>
-                <span>Poster</span>
-            </a>
-
             <!-- Registration (people icon) -->
             <a href="register.html" class="sidebar-link" onclick="closeSidebar()">
                 <span>
@@ -565,11 +550,41 @@
                 <span>Registration</span>
             </a>
 
+            <a href="format.html" class="sidebar-link active" onclick="closeSidebar()">
+                <span>
+                    <div class="tab" style="background-color: transparent;">
+                        <svg class="w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true"
+                            xmlns="http://www.w3.org/2000/svg" width="26px" height="26px" fill="none" viewBox="0 0 24 24">
+                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M19.2857 7V5.78571c0-.43393-.3482-.78571-.7778-.78571H6.06345c-.42955 0-.77777.35178-.77777.78571V16m0 0h-1c-.55229 0-1 .4477-1 1v1c0 .5523.44771 1 1 1h5m-4-3h4m7.00002-6v3c0 .5523-.4477 1-1 1h-3m8-3v8c0 .5523-.4477 1-1 1h-6c-.5523 0-1-.4477-1-1v-5.397c0-.2536.0963-.4977.2696-.683l2.434-2.603c.189-.2022.4535-.317.7304-.317h3.566c.5523 0 1 .4477 1 1Z" />
+                        </svg>
+
+                    </div>
+                </span>
+                <span>Format</span>
+            </a>
+
+            <a href="poster.html" class="sidebar-link" onclick="closeSidebar()">
+                <span>
+                    <div class="tab" style="background-color: transparent;">
+                        <svg class="w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true"
+                            xmlns="http://www.w3.org/2000/svg" width="26px" height="26px" fill="none"
+                            viewBox="0 0 24 24">
+                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M5 19V4a1 1 0 0 1 1-1h12a1 1 0 0 1 1 1v13H7a2 2 0 0 0-2 2Zm0 0a2 2 0 0 0 2 2h12M9 3v14m7 0v4" />
+                        </svg>
+
+                    </div>
+                </span>
+                <span>Poster</span>
+            </a>
+
             <a href="members.html" class="sidebar-link active" onclick="closeSidebar()">
                 <span>
                     <div class="tab" style="background-color: transparent;">
                         <svg class="w-[26px] h-[26px] text-gray-800 dark:text-white" aria-hidden="true"
-                            xmlns="http://www.w3.org/2000/svg" width="26px" height="26px" fill="none" viewBox="0 0 24 24">
+                            xmlns="http://www.w3.org/2000/svg" width="26px" height="26px" fill="none"
+                            viewBox="0 0 24 24" style="width: 26px; height: 26px;">
                             <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                 d="M3.78552 9.5 12.7855 14l9-4.5-9-4.5-8.99998 4.5Zm0 0V17m3-6v6.2222c0 .3483 2 1.7778 5.99998 1.7778 4 0 6-1.3738 6-1.7778V11" />
                         </svg>
@@ -647,6 +662,7 @@
 </body>
 
 </html>
+
 
 
 
