--- a/index.html
+++ b/index.html
@@ -333,11 +333,13 @@
             color: hsl(var(--foreground));
         }
 
-        /* Countdown specific */
+        /* Countdown specific - FIXED FOR MOBILE */
         .countdown-card {
             margin: 30px 0;
-            width: 500px;
-            height: 200px;
+            width: 100%;
+            max-width: 100%;
+            height: auto;
+            min-height: 200px;
         }
 
         .countdown-title {
@@ -350,8 +352,8 @@
 
         .countdown-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(80px, 1fr));
-            gap: 16px;
+            grid-template-columns: repeat(4, 1fr);
+            gap: 12px;
         }
 
         .countdown-item {
@@ -361,11 +363,11 @@
         .countdown-value {
             background: hsl(var(--primary));
             color: white;
-            font-size: 24px;
+            font-size: 20px;
             font-weight: bold;
-            padding: 16px;
+            padding: 12px 8px;
             border-radius: 8px;
-            min-height: 60px;
+            min-height: 50px;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -373,7 +375,7 @@
         }
 
         .countdown-label {
-            font-size: 14px;
+            font-size: 12px;
             color: hsl(var(--muted-foreground));
             font-weight: 500;
         }
@@ -558,6 +560,20 @@
             .lg-col-span-2 {
                 grid-column: span 2;
             }
+
+            .countdown-value {
+                font-size: 24px;
+                padding: 16px;
+                min-height: 60px;
+            }
+
+            .countdown-label {
+                font-size: 14px;
+            }
+
+            .countdown-grid {
+                gap: 16px;
+            }
         }
 
         @media (min-width: 1024px) {
@@ -570,7 +586,8 @@
             }
         }
 
-        @media (max-width: 640px) {
+        /* MOBILE SPECIFIC FIXES */
+        @media (max-width: 767px) {
             .content {
                 padding: 24px 16px;
             }
@@ -579,8 +596,119 @@
                 gap: 16px;
             }
 
+            /* Countdown mobile fixes */
             .countdown-grid {
                 grid-template-columns: repeat(2, 1fr);
+                gap: 8px;
+            }
+
+            .countdown-value {
+                font-size: 16px;
+                padding: 8px 4px;
+                min-height: 40px;
+            }
+
+            .countdown-label {
+                font-size: 11px;
+            }
+
+            .countdown-title {
+                font-size: 18px;
+                margin-bottom: 16px;
+            }
+
+            /* Card responsive fixes */
+            .card {
+                padding: 16px;
+                margin-top: 16px;
+            }
+
+            .card-title {
+                font-size: 18px;
+            }
+
+            /* Hero responsive fixes */
+            .hero-content {
+                padding: 16px;
+            }
+
+            .hero-badge {
+                padding: 8px 16px;
+                font-size: 14px;
+                text-align: center;
+            }
+
+            /* Grid layout fixes for mobile */
+            .section .grid {
+                grid-template-columns: 1fr;
+            }
+
+            /* Icon fixes for mobile */
+            .icon-large {
+                width: 36px;
+                height: 36px;
+                margin-bottom: 12px;
+            }
+
+            .icon-container {
+                width: 36px;
+                height: 36px;
+            }
+
+            /* Button fixes for mobile */
+            .btn {
+                padding: 10px 16px;
+                font-size: 14px;
+            }
+
+            /* Sidebar mobile adjustments */
+            .sidebar {
+                width: 280px;
+            }
+
+            .sidebar-title {
+                font-size: 24px;
+            }
+        }
+
+        /* Extra small mobile fixes */
+        @media (max-width: 480px) {
+            .countdown-grid {
+                grid-template-columns: repeat(2, 1fr);
+                gap: 6px;
+            }
+
+            .countdown-value {
+                font-size: 14px;
+                padding: 6px 2px;
+                min-height: 35px;
+            }
+
+            .countdown-label {
+                font-size: 10px;
+            }
+
+            .hero h1 {
+                font-size: clamp(24px, 6vw, 48px);
+            }
+
+            .hero-subtitle {
+                font-size: clamp(18px, 5vw, 28px);
+            }
+
+            .hero-badge {
+                padding: 6px 12px;
+                font-size: 12px;
+                flex-direction: column;
+                gap: 4px;
+            }
+
+            .card {
+                padding: 12px;
+            }
+
+            .sidebar {
+                width: 260px;
             }
         }
     </style>
@@ -747,7 +875,7 @@
                 <div class="hero-date animate-fade-up">
                     <span class="font-bold">4th October 2025</span>
                 </div>
-                <div class="hero-badge">
+                <div class="hero-badge animate-fade-up">
                     <svg viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2" stroke-linecap="round"
                         stroke-linejoin="round"
                         style="width: 18px; height: 18px; margin-right: 6px; vertical-align: middle;">
@@ -1105,6 +1233,3 @@
 
 
 </html>
-
-
-
