--- a/format.html
+++ b/format.html
@@ -534,7 +534,7 @@
                         </svg>
                         Publication
                     </h2>
-                    <h3>
+                    <!-- <h3>
                         TITLE OF YOUR MANUSCRIPT (TIMES NEW ROMAN Bold 14pt centered)
                     </h3>
                     <h4>
@@ -549,34 +549,12 @@
                     </p>
                     <p>
                         Keywords (at least 4-5): Times New Roman, 12 pt bold
-                    </p>
+                    </p> -->
                     <h3>
                         Guidelines for manuscript:
                     </h3>
                     <p>
-                        1. The manuscript should be prepared in single column format. The manuscript must contain the
-                        following sections: Introduction, Methodology, Findings, Conclusion, and References. Sections
-                        can be named differently, and subsections may be included.
-                    </p>
-                    <p>
-                        2. The manuscript must be submitted as a Microsoft Word document. All
-                        images (illustrations, charts, photos) must be placed in the text just after the first
-                        point of reference.
-                    </p>
-                    <p>
-                        3. Tables must be created using the Microsoft Word table functions and included as
-                        part of the text immediately after the first point of reference. Do not place them at
-                        the end of your manuscript.
-                    </p>
-                    <p>
-                        4. All reference items must be in 8 pt font. Please use APA style for references.
-                    </p>
-                    <p>
-                        5. Formatting Instructions: <br>
-                        ---Heading 1: Times New Roman, 12 pt bold <br>
-                        ---Heading 2: Times New Roman, 12 pt <br>
-                        ---Heading 3: Times New Roman, 12 pt italics <br>
-                        ---Body text: Times New Roman 11 pt <br>
+                        Follow The IEEE format PDF attached below!
                     </p>
 
                     <!-- <p>
@@ -766,4 +744,5 @@
 
 
 </html>
+
 
