--- a/format.html
+++ b/format.html
@@ -554,6 +554,9 @@
                         Guidelines for manuscript:
                     </h3>
                     <p>
+                        Paper can be published in International Journal for some processing charge! 
+                    </p>
+                    <p>
                         Follow The IEEE format PDF attached below!
                     </p>
 
@@ -744,5 +747,6 @@
 
 
 </html>
+
 
 
