--- a/format.html
+++ b/format.html
@@ -553,7 +553,7 @@
                     <h3>
                         Guidelines for manuscript:
                     </h3>
-                    <p>
+                    <p style="font-size: 20px;">
                         Paper can be published in International Journal for some processing charge! 
                     </p>
                     <p>
@@ -747,6 +747,7 @@
 
 
 </html>
+
 
 
 
