--- a/format.html
+++ b/format.html
@@ -550,9 +550,9 @@
                     <p>
                         Keywords (at least 4-5): Times New Roman, 12 pt bold
                     </p> -->
-                    <h3>
+                    <p style="font-size:20px;">
                         Paper can be published in International Journal for some processing charge!
-                    </h3>
+                    </p>
                     <p>
                         Follow The IEEE format PDF attached below!
                     </p>
@@ -744,6 +744,7 @@
 
 
 </html>
+
 
 
 
