--- a/members.html
+++ b/members.html
@@ -730,7 +730,7 @@
                     <h2 class="section-title">Patron</h2>
                     <p class="section-description">Providing visionary leadership and guidance for the conference</p>
                 </div>
-                <div class="grid grid-1">
+                <div class="grid grid-responsive grid-md-4">
                     <div class="ocean-card member-card animate-fade-up">
                         <div class="member-image">
                             <img src="https://www.stvincentngp.edu.in/img/director_paul_chandrankunnel.jpg"
@@ -1023,6 +1023,7 @@
 </body>
 
 </html>
+
 
 
 
