--- a/format.html
+++ b/format.html
@@ -322,6 +322,7 @@
             border: none;
             cursor: pointer;
             margin-top: 16px;
+            margin-left: 15px;
         }
 
         .btn:hover {
@@ -614,6 +615,16 @@
                         </svg>
                         Download IEEE Format Template
                     </a>
+                    <a href="Poster template.pdf" class="btn">
+                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+                            stroke-linecap="round" stroke-linejoin="round"
+                            style="width: 20px; height: 20px; margin-right: 8px;">
+                            <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4" />
+                            <polyline points="7 10 12 15 17 10" />
+                            <line x1="12" y1="15" x2="12" y2="3" />
+                        </svg>
+                        Download Poster Template
+                    </a>
                 </div>
 
                 <!-- Instructions for Manuscripts Box -->
@@ -744,7 +755,6 @@
 
 
 </html>
-
 
 
 
