--- a/format.html
+++ b/format.html
@@ -615,7 +615,7 @@
                         </svg>
                         Download IEEE Format Template
                     </a>
-                    <a href="Poster template.pdf" class="btn">
+                    <a href="poster.pptx" class="btn">
                         <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
                             stroke-linecap="round" stroke-linejoin="round"
                             style="width: 20px; height: 20px; margin-right: 8px;">
@@ -755,6 +755,7 @@
 
 
 </html>
+
 
 
 
